actually using chrome's phone screen simulator and fixed spillage going to the right with empty space

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,3 +56,13 @@ html {
   opacity: 0.15;
   width: 100%;
 }
+
+@media only screen and (max-width: 360px) {
+  #backgroundImage {
+    position: fixed;
+    z-index: -1;
+    left: 0;
+    top: -100px;
+    opacity: 0.15;
+  }
+}
