--- a/client/src/components/extendedForecast.css
+++ b/client/src/components/extendedForecast.css
@@ -267,7 +267,7 @@ line {
     border-radius: 2px;
     width: 100%;
     position: relative;
-    margin-left: 0.5rem;
+    margin-left: 1.3rem;
     margin-right: auto;
     padding-left: 2rem;
     margin-top: 1rem;
